2016-08-31  Nik Nyby  <nnyby@columbia.edu>

	* Use https Artstor URLs.

2016-01-21  Nik Nyby  <nnyby@columbia.edu>

	* Fix Vimeo asset collection bug.

2015-01-14  Nik Nyby  <nnyby@columbia.edu>

	* Removed console.log statements.
	* Removed settings.js.

2015-12-08  Nik Nyby  <nnyby@columbia.edu>

	* Fix image collection on learn.columbia.edu.
	* Removed realplayer-specific code.

2015-12-02  Nik Nyby  <nnyby@columbia.edu>

	* Removed IE-specific code.